# nabre-terminal

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Nabre Terminal.cbp  Nabre Terminal.layout  Nabre-Terminal.cbp  README.md  books.json  main.cpp  nabretermui.cpp
